[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/TD_Player.gd" type="Script" id=1]
[ext_resource path="res://Models/capsule/capsule.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Scenes/Weapons/BaseGun.tscn" type="PackedScene" id=3]
[ext_resource path="res://SFX/PlayerHitSFX.wav" type="AudioStream" id=4]
[ext_resource path="res://Textures/health-shield bar progress.png" type="Texture" id=5]
[ext_resource path="res://Textures/health-shield bar.png" type="Texture" id=6]
[ext_resource path="res://Textures/dashbarprogress.png" type="Texture" id=7]
[ext_resource path="res://Textures/dashbarprogress2.png" type="Texture" id=8]
[ext_resource path="res://Resources/tecno/tecnomancer1.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=11]
resource_name = "LevelTransition"
length = 12.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6, 12 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 359, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6, 12 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 4 ), Vector3( 0, 0, 2 ), Vector3( 0, 0, 4 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 4 ) ]
}

[sub_resource type="CapsuleShape" id=1]
radius = 0.304886
height = 0.527803

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.956863, 0, 1, 1 )
emission_enabled = true
emission = Color( 1, 1, 1, 1 )
emission_energy = 16.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CapsuleShape" id=3]
radius = 0.448836
height = 0.455865

[sub_resource type="SphereShape" id=6]
radius = 0.685301

[sub_resource type="Shader" id=4]
code = "/* 
Earthbound battle backgrounds shader with scrolling effect and palette cycling like in the original game.
@retr0_dev

https://godotshaders.com/shader/earthbound-like-battle-background-shader-w-scroll-effect-and-palette-cycling/
	
Apply the shader to a TextureRect or a Sprite. Use a texture with some shapes in a transparent background for best results.
You can then use a ColorRect or another method to paint the background.
You can use the shader on multiple TextureRects and obtain a double-buffer effect tweaking the values for each one, remember to Make Unique the shader material.
*/
shader_type canvas_item;

uniform float screen_height = 640.0;
uniform float amplitude = 0.075;
uniform float frequency = 10.0;
uniform float speed = 2.0;
uniform float amplitude_vertical = 0.0;
uniform float frequency_vertical = 0.0;
uniform float speed_vertical = 0.0;
uniform vec2 scroll_direction = vec2(0.0, 0.0);
uniform float scrolling_speed = 0.08;
uniform bool enable_palette_cycling = false;
uniform sampler2D palette;
uniform float palette_speed = 0.1;

void fragment()
{
	float diff_x = amplitude * sin((frequency * UV.y) + (speed * TIME));
	float diff_y = amplitude_vertical * sin((frequency_vertical * UV.y)  + (speed_vertical * TIME));
	vec2 scroll = scroll_direction * TIME * scrolling_speed;
	vec4 tex = texture(TEXTURE, vec2(UV.x + diff_x, UV.y + diff_y) + scroll);
	float palette_swap = mod(tex.r - TIME * palette_speed, 1.0);
	
	if (enable_palette_cycling)
	{
		COLOR = vec4(texture(palette, vec2(palette_swap, 0)).rgb, tex.a);
	}
	else COLOR = tex;
	COLOR = mix(vec4(0.0), COLOR, float(int(UV.y * screen_height) % 2));
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/screen_height = 640.0
shader_param/amplitude = -0.005
shader_param/frequency = -1.201
shader_param/speed = 6.69
shader_param/amplitude_vertical = -0.005
shader_param/frequency_vertical = -1.493
shader_param/speed_vertical = 6.042
shader_param/scroll_direction = Vector2( 0, 0 )
shader_param/scrolling_speed = 0.08
shader_param/enable_palette_cycling = false
shader_param/palette_speed = 0.1

[sub_resource type="Shader" id=15]
code = "/* 
Earthbound battle backgrounds shader with scrolling effect and palette cycling like in the original game.
@retr0_dev

https://godotshaders.com/shader/earthbound-like-battle-background-shader-w-scroll-effect-and-palette-cycling/
	
Apply the shader to a TextureRect or a Sprite. Use a texture with some shapes in a transparent background for best results.
You can then use a ColorRect or another method to paint the background.
You can use the shader on multiple TextureRects and obtain a double-buffer effect tweaking the values for each one, remember to Make Unique the shader material.
*/
shader_type canvas_item;

uniform float screen_height = 640.0;
uniform float amplitude = 0.075;
uniform float frequency = 10.0;
uniform float speed = 2.0;
uniform float amplitude_vertical = 0.0;
uniform float frequency_vertical = 0.0;
uniform float speed_vertical = 0.0;
uniform vec2 scroll_direction = vec2(0.0, 0.0);
uniform float scrolling_speed = 0.08;
uniform bool enable_palette_cycling = false;
uniform sampler2D palette;
uniform float palette_speed = 0.1;

void fragment()
{
	float diff_x = amplitude * sin((frequency * UV.y) + (speed * TIME));
	float diff_y = amplitude_vertical * sin((frequency_vertical * UV.y)  + (speed_vertical * TIME));
	vec2 scroll = scroll_direction * TIME * scrolling_speed;
	vec4 tex = texture(TEXTURE, vec2(UV.x + diff_x, UV.y + diff_y) + scroll);
	float palette_swap = mod(tex.r - TIME * palette_speed, 1.0);
	
	if (enable_palette_cycling)
	{
		COLOR = vec4(texture(palette, vec2(palette_swap, 0)).rgb, tex.a);
	}
	else COLOR = tex;
	COLOR = mix(vec4(0.0), COLOR, float(int(UV.y * screen_height) % 2));
}"

[sub_resource type="ShaderMaterial" id=16]
shader = SubResource( 15 )
shader_param/screen_height = 640.0
shader_param/amplitude = -0.01
shader_param/frequency = -1.201
shader_param/speed = 6.69
shader_param/amplitude_vertical = -0.005
shader_param/frequency_vertical = -1.493
shader_param/speed_vertical = 6.042
shader_param/scroll_direction = Vector2( 0, 0 )
shader_param/scrolling_speed = 0.08
shader_param/enable_palette_cycling = false
shader_param/palette_speed = 0.1

[sub_resource type="Shader" id=13]
code = "/* 
Earthbound battle backgrounds shader with scrolling effect and palette cycling like in the original game.
@retr0_dev

https://godotshaders.com/shader/earthbound-like-battle-background-shader-w-scroll-effect-and-palette-cycling/
	
Apply the shader to a TextureRect or a Sprite. Use a texture with some shapes in a transparent background for best results.
You can then use a ColorRect or another method to paint the background.
You can use the shader on multiple TextureRects and obtain a double-buffer effect tweaking the values for each one, remember to Make Unique the shader material.
*/
shader_type canvas_item;

uniform float screen_height = 640.0;
uniform float amplitude = 0.075;
uniform float frequency = 10.0;
uniform float speed = 2.0;
uniform float amplitude_vertical = 0.0;
uniform float frequency_vertical = 0.0;
uniform float speed_vertical = 0.0;
uniform vec2 scroll_direction = vec2(0.0, 0.0);
uniform float scrolling_speed = 0.08;
uniform bool enable_palette_cycling = false;
uniform sampler2D palette;
uniform float palette_speed = 0.1;

void fragment()
{
	float diff_x = amplitude * sin((frequency * UV.y) + (speed * TIME));
	float diff_y = amplitude_vertical * sin((frequency_vertical * UV.y)  + (speed_vertical * TIME));
	vec2 scroll = scroll_direction * TIME * scrolling_speed;
	vec4 tex = texture(TEXTURE, vec2(UV.x + diff_x, UV.y + diff_y) + scroll);
	float palette_swap = mod(tex.r - TIME * palette_speed, 1.0);
	
	if (enable_palette_cycling)
	{
		COLOR = vec4(texture(palette, vec2(palette_swap, 0)).rgb, tex.a);
	}
	else COLOR = tex;
	COLOR = mix(vec4(0.0), COLOR, float(int(UV.y * screen_height) % 2));
}"

[sub_resource type="ShaderMaterial" id=14]
shader = SubResource( 13 )
shader_param/screen_height = 640.0
shader_param/amplitude = -0.005
shader_param/frequency = -1.201
shader_param/speed = 6.69
shader_param/amplitude_vertical = -0.005
shader_param/frequency_vertical = -1.493
shader_param/speed_vertical = 6.042
shader_param/scroll_direction = Vector2( 0, 0 )
shader_param/scrolling_speed = 0.08
shader_param/enable_palette_cycling = false
shader_param/palette_speed = 0.1

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0.588235, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextureProgress2:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -51, 759 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureProgress3:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -51, 759 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureProgress3:value")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 100.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextureProgress2:value")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("DashMeter3:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2000, 801 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DashMeter3:value")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "health_slide_in"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("TextureProgress2:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -2000, 759 ), Vector2( -41, 951 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureProgress3:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -2000, 759 ), Vector2( -41, 951 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureProgress2:value")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DashMeter3:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -2000, 801 ), Vector2( 207, 971 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("DashMeter3:value")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0 ]
}

[node name="TopDown_Player" type="KinematicBody" groups=["player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )
GunPosPath = NodePath("WeaponMount/BaseGun")
player = NodePath("Player")

[node name="CameraPivot" type="Position3D" parent="."]

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4 )

[node name="CameraPlayer" type="AnimationPlayer" parent="CameraPivot"]
anims/LevelTransition = SubResource( 11 )
anims/RESET = SubResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="capsule" type="MeshInstance" parent="."]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, -0.038476, 0 )
visible = false
mesh = ExtResource( 2 )
material/0 = null

[node name="tecnomancer1" parent="." instance=ExtResource( 9 )]
transform = Transform( -2.98457, 0, -0.303846, 0, 3, 0, 0.303846, 0, -2.98457, 0, -0.352936, 0 )

[node name="Player" type="Spatial" parent="."]

[node name="CSGSphere" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.229605, -0.119375 )
visible = false
radius = 0.25
material = SubResource( 2 )

[node name="HitBox" type="Area" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="HitBox"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="PickupRadius" type="Area" parent="."]
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="PickupRadius"]
shape = SubResource( 6 )

[node name="WeaponMount" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0582492, 1.50501, -0.909388 )

[node name="BaseGun" parent="WeaponMount" instance=ExtResource( 3 )]
base_rpm = 600.0

[node name="HitSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="TextureProgress3" type="TextureProgress" parent="."]
margin_left = -51.0
margin_top = 759.0
margin_right = 1869.0
margin_bottom = 1839.0
rect_scale = Vector2( 0.2, 0.2 )
value = 100.0
texture_under = ExtResource( 6 )
tint_progress = Color( 1, 0.890196, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress2" type="TextureProgress" parent="."]
material = SubResource( 5 )
margin_left = -51.0
margin_top = 759.0
margin_right = 1869.0
margin_bottom = 1839.0
rect_scale = Vector2( 0.2, 0.2 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DashMeter3" type="TextureProgress" parent="."]
material = SubResource( 16 )
margin_left = -2000.0
margin_top = 801.0
margin_right = -1492.0
margin_bottom = 972.001
rect_scale = Vector2( 0.2, 0.2 )
max_value = 20.0
step = 0.1
texture_progress = ExtResource( 8 )

[node name="DashMeter2" type="TextureProgress" parent="."]
material = SubResource( 14 )
margin_left = 36.0
margin_top = 371.0
margin_right = 1956.0
margin_bottom = 1451.0
rect_scale = Vector2( 0.2, 0.2 )
max_value = 20.0
step = 0.1
value = 10.0
texture_progress = ExtResource( 7 )

[node name="DashMeter" type="ProgressBar" parent="."]
visible = false
margin_left = 440.0
margin_top = 813.0
margin_right = 554.0
margin_bottom = 903.0
rect_rotation = -4.19082
rect_scale = Vector2( 1.36836, 0.69182 )
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
max_value = 20.0
step = 0.1
value = 10.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "health_slide_in"
anims/RESET = SubResource( 7 )
anims/health_slide_in = SubResource( 8 )

[node name="PowerUps" type="Spatial" parent="."]

[node name="GroundRay" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.386597, 0 )
enabled = true

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="area_entered" from="PickupRadius" to="." method="_on_PickupRadius_area_entered"]
